fix(elements|ino-button): fix invisible loading spinner (#10)

--- a/packages/elements/src/components/ino-button/ino-button.scss
+++ b/packages/elements/src/components/ino-button/ino-button.scss
@@ -222,7 +222,7 @@ $color-states: (
 }
 
 // Loading Styles
-:host([ino-loading="true"]) {
+:host([ino-loading]:not([ino-loading="false"])) {
   button {
     pointer-events: none;
   }
